feat: creating func upload file and creating documentasion swagger
